	add a new function to glue together the invocation-error string.
	* src/global.c (shortcut_init): In the Help Viewer and File Browswer,
	bind the unbound Home and End keys to goto_top and goto_bottom, to
	mimic the behaviour of these keys in file viewers and web browsers.
	Also show ^Y and ^V in the WhereisFile menu instead of M-\ and M-/,
	for similarity with the WhereIs menu.

GNU nano 2.4.1 - 2015.04.14
2015-04-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Fix compilation with --enable-tiny.
	* README: Mention also the Savannah page for reporting bugs.

2015-04-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (filesearch_init): Stop M-\ and M-/ in WhereisFile
	menu (reached via ^R ^T ^W) from doing also an unrequested search
	after having performed their function.  Fixes Savannah bug #44790.
	* src/global.c (shortcut_init): Rebind ^Y and ^V in the WhereisFile
	menu from the pointless page_up() and page_down() to the effective
	first_file() and last_file().  Also unbind some other useless keys.
	* src/browser.c (filesearch_init): Remove an unused variable, and
	adjust the introductory comment for the recently tweaked logic.
	* src/rcfile.c (parse_linter, parse_formatter): Use mallocstrcpy()
	in a correct manner; don't let it free an unrelated string.

2015-04-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Do not split off the marked region
	into a separate partition, but do the replacings in the current one,
	taking good care to stay within the boundaries of the region.  This
	fixes an undo bug where the first part of a line would disappear if
	the region started in the middle of a line.  Bug was reported here:
	https://lists.gnu.org/archive/html/nano-devel/2015-03/msg00077.html.
	Original idea and patch were by Mark Majeres.

2015-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_select_dirname, findnextfile): Rename